--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
 				<div class="skills-wrapper row">
 					<!-- main skill No. 1 -->
 					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="88">
+						<div class="chart center" data-percent="75">
 							<span><span id="chart_num_1">0</span> %</span>
 						</div>
-						<h2>Java</h2>
+						<h2>Python</h2>
 					</div>
 					<!-- main skill No. 2 -->					
 					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="95">
-							<span><span id="chart_num_2">0</span> %</span>
+						<div class="chart center" data-percent="60">
+							<span><span id="chart_num_2">60</span> %</span>
 						</div>
 						<h2>Web Development</h2>
 					</div>
