--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 						<div class="chart center" data-percent="55">
 							<span><span id="chart_num_4">0</span> %</span>
 						</div>
-						<h2>Computer Networks</h2>
+						<h2>Network Infrastructure</h2>
 					</div>
 				</div> <!-- End main skills -->
 				<div class="other-skills">
